@@ -55,6 +55,7 @@ Commands:
    
 Fixes:
  * A crashbug in @search was fixed. Reported by Paige. [GM]
+ * @search elock class failed to report invalid lock strings. Fixed. [GM]
  * @cpattr and @mvattr could break attribute trees. Reported by Sketch. [MG]
  * benchmark() calculated the average incorrectly. Reported by Cheetah. [DC]
  * "look <container>'s <object>" incorrectly stopped working in p1 when
